# OpenWeatherMap

./: .env  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  gunicorn-conf.py  pyproject.toml  pytest.ini  ruff.toml  server.py  whitelist.txt
.github/workflows/: pre-commit.yml  run-tests.yml
src/: __init__.py  app.py  exception_handlers.py  exceptions.py  middlewares.py  utilities.py
src/api/: base.py  weather.py
src/api/dependencies/: db.py  rate_limiter.py  services.py
src/clients/: __init__.py  http.py  open_weather.py
src/migrations/: env.py
src/migrations/versions/: 2026_03_05_1559-e6655f08a77d_init.py  2026_03_05_1611-303c5aed34bd_add_performance.py  2026_03_06_1702-7138745372b6_add_forecast.py
src/models/: __init__.py  base.py  weather.py
src/schemas/: base.py  weather.py
src/services/: base.py  weather.py
src/settings/: conf.py  constants.py  db.py  logging.py  logging_route.py  redis.py
src/tests/: conftest.py
src/tests/api/: test_base.py  test_datarobot_mongo_create.py  test_datarobot_sql.py  test_weather.py
src/tests/factories/: __init__.py  base.py  tenant.py  user.py  weather.py
