[tool.poetry]
name = "src"
version = "1.1.0"
description = "Open Weather Integration + Concurrency"
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.13.3"
fastapi = "^0.115.12"
uvicorn = "^0.38.0"
gunicorn = "23.0.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.45.0"}
python-json-logger = "^3.3.0"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
aioboto3 = "^14.3.0"
pyjwt = "^2.10.1"
cryptography = "44.0.3"
toml = "^0.10.2"
ujson = "^5.11.0"
pyotp = "^2.9.0"
redis = "^7.1.0"
pydantic = {extras = ["email"], version = "^2.12.4"}
uvloop = "^0.22.1"
retell-sdk = "^4.65.0"
beanie = "^2.0.0"
motor = "^3.7.1"
aiosqlite = "^0.22.1"



[tool.poetry.group.dev.dependencies]
ipdb = "==0.13.13"
black = "==25.11.0"
darglint = "==1.8.1"
factory_boy = "==3.3.3"
flake8 = "==7.3.0"
flake8-bandit = "==4.1.1"
flake8-comprehensions = "==3.17.0"
flake8-eradicate = "==1.5.0"
flake8-isort = "==7.0.0"
flake8-spellcheck = "==0.28.0"
bandit = "==1.9.1"
isort = "==7.0.0"
pep8-naming = "==0.15.1"
pre-commit = "==4.4.0"
pre-commit-hooks = "==6.0.0"
safety = "==3.7.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"
mypy = "^1.18.1"
types-toml = "^0.10.8.20240310"
types-ujson = "^5.10.0.20250822"
pytest-httpx = "^0.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true
exclude = '''
(
    \.venv
)
'''

[tool.isort]
profile = "black"
force_single_line=true
order_by_type=false
line_length = 120
skip = '.venv'
src_paths = ['src']


[tool.ruff]
ignore = ['S105']